--- a/_posts/2017-10-16-NewSite.md
+++ b/_posts/2017-10-16-NewSite.md
@@ -1,7 +1,7 @@
 ---
 layout: page
-title:  "Griffith Lab site launch"
-teaser: "griffithlab.org site is now live!"
+title:  "Bicomputing Group Website is live"
+teaser: "BCG GROUP HAS A NEW WEBSITE"
 header:
     image_fullwidth: "genvis-dna-bg_optimized_v1a.png"
 breadcrumb: true
