--- a/_posts/2017-10-16-NewSite.md
+++ b/_posts/2017-10-16-NewSite.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title:  "Bicomputing Group Website is live"
+title:  "Biocomputing Group Website is live"
 teaser: "BCG GROUP HAS A NEW WEBSITE"
 header:
     image_fullwidth: "genvis-dna-bg_optimized_v1a.png"
